==> ARMmbed/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF51/serial_api.c <==
#include "serial_api.h"
#include <string.h>
#include "mbed_assert.h"
#include "mbed_error.h"
#include "nrf_uart.h"
#include "nrf_drv_common.h"
#include "app_util_platform.h"
#include "nrf_gpio.h"
#include "sdk_config.h"
#define UART_INSTANCE_COUNT 1
#define UART_INSTANCE       NRF_UART0
#define UART_IRQn           UART0_IRQn
#define UART_IRQ_HANDLER    UART0_IRQHandler
#define UART_INSTANCE_ID    0
#define UART_CB uart_cb[UART_INSTANCE_ID]
#define UART_DEFAULT_BAUDRATE   UART_DEFAULT_CONFIG_BAUDRATE
#define UART_DEFAULT_PARITY     UART_DEFAULT_CONFIG_PARITY
    #define MBED_CONF_NORDIC_UART_HWFC 1
    #define UART_DEFAULT_HWFC       UART_DEFAULT_CONFIG_HWFC
    #define UART_DEFAULT_HWFC  NRF_UART_HWFC_DISABLED
#define UART_DEFAULT_CTS        CTS_PIN_NUMBER
#define UART_DEFAULT_RTS        RTS_PIN_NUMBER
    #define NRFx_MBED_UART_IRQ_PRIORITY  APP_IRQ_PRIORITY_LOW
    #define NRFx_MBED_UART_IRQ_PRIORITY  APP_IRQ_PRIORITY_LOWEST
    #define UART_IRQ_TX 1
    #define UART_IRQ_RX 2

void serial_init(serial_t *obj, PinName tx, PinName rx) {

    NVIC_SetVector(UART0_IRQn, (uint32_t) UART0_IRQHandler);

    
    UART_CB.pseltxd =
        (tx == NC) ? NRF_UART_PSEL_DISCONNECTED : (uint32_t)tx;
    UART_CB.pselrxd =
        (rx == NC) ? NRF_UART_PSEL_DISCONNECTED : (uint32_t)rx;
    if (UART_CB.pseltxd != NRF_UART_PSEL_DISCONNECTED) {
        nrf_gpio_pin_set(UART_CB.pseltxd);
        nrf_gpio_cfg_output(UART_CB.pseltxd);
    }
    if (UART_CB.pselrxd != NRF_UART_PSEL_DISCONNECTED) {
        nrf_gpio_cfg_input(UART_CB.pselrxd, NRF_GPIO_PIN_NOPULL);
    }

    if (UART_CB.initialized) {
        // For already initialized peripheral it is sufficient to reconfigure
        // RX/TX pins only.

        // Ensure that there is no unfinished TX transfer.
        while (!serial_writable(obj)) {
        }
        // UART pins can be configured only when the peripheral is disabled.
        nrf_uart_disable(UART_INSTANCE);
        nrf_uart_txrx_pins_set(UART_INSTANCE, UART_CB.pseltxd, UART_CB.pselrxd);
        nrf_uart_enable(UART_INSTANCE);
    }
    else {
        UART_CB.baudrate = UART_DEFAULT_BAUDRATE;
        UART_CB.parity   = UART_DEFAULT_PARITY;
        UART_CB.hwfc     = UART_DEFAULT_HWFC;
        UART_CB.pselcts  = UART_DEFAULT_CTS;
        UART_CB.pselrts  = UART_DEFAULT_RTS;

        nrf_uart_event_clear(UART_INSTANCE, NRF_UART_EVENT_RXDRDY);
        nrf_uart_event_clear(UART_INSTANCE, NRF_UART_EVENT_TXDRDY);
        nrf_uart_task_trigger(UART_INSTANCE, NRF_UART_TASK_STARTRX);
        nrf_uart_task_trigger(UART_INSTANCE, NRF_UART_TASK_STARTTX);

        nrf_uart_int_disable(UART_INSTANCE, NRF_UART_INT_MASK_RXDRDY |
                                            NRF_UART_INT_MASK_TXDRDY);
    #if DEVICE_SERIAL_ASYNCH
        nrf_uart_int_enable(UART_INSTANCE, NRF_UART_INT_MASK_ERROR);
    #endif
        nrf_drv_common_irq_enable(UART_IRQn, NRFx_MBED_UART_IRQ_PRIORITY);

        // TX interrupt needs to be signaled when transmitter buffer is empty,
        // so a dummy transmission is needed to get the TXDRDY event initially
        // set.
        nrf_uart_configure(UART_INSTANCE,
            NRF_UART_PARITY_EXCLUDED, NRF_UART_HWFC_DISABLED);
        // Use maximum baud rate, so this dummy transmission takes as little
        // time as possible.
        nrf_uart_baudrate_set(UART_INSTANCE, NRF_UART_BAUDRATE_1000000);
        // Perform it with disconnected TX pin, so nothing actually comes out
        // of the device.
        nrf_uart_txrx_pins_disconnect(UART_INSTANCE);
        nrf_uart_hwfc_pins_disconnect(UART_INSTANCE);
        nrf_uart_enable(UART_INSTANCE);
        nrf_uart_txd_set(UART_INSTANCE, 0);
        while (!nrf_uart_event_check(UART_INSTANCE, NRF_UART_EVENT_TXDRDY)) {
        }
        nrf_uart_disable(UART_INSTANCE);

        // Now everything is prepared to set the default configuration and
        // connect the peripheral to actual pins.
        nrf_uart_txrx_pins_set(UART_INSTANCE, UART_CB.pseltxd, UART_CB.pselrxd);
        nrf_uart_baudrate_set(UART_INSTANCE, UART_CB.baudrate);
        nrf_uart_configure(UART_INSTANCE, UART_CB.parity, UART_CB.hwfc);
        if (UART_CB.hwfc == NRF_UART_HWFC_ENABLED) {
            internal_set_hwfc(FlowControlRTSCTS,
                (PinName) UART_CB.pselrts, (PinName) UART_CB.pselcts);
        }
        
        nrf_uart_enable(UART_INSTANCE);

        UART_CB.initialized = true;
    }

    if (tx == STDIO_UART_TX && rx == STDIO_UART_RX) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
    else {
        stdio_uart_inited = 0;
    }
}

void serial_free(serial_t *obj)
{
    (void)obj;

    if (UART_CB.initialized) {
        nrf_uart_disable(UART_INSTANCE);
        nrf_uart_int_disable(UART_INSTANCE, NRF_UART_INT_MASK_RXDRDY |
                                            NRF_UART_INT_MASK_TXDRDY |
                                            NRF_UART_INT_MASK_ERROR);
        nrf_drv_common_irq_disable(UART_IRQn);
        UART_CB.initialized = false;

        // There is only one UART instance, thus at this point the stdio UART
        // can no longer be initialized.
        stdio_uart_inited = 0;
    }
}

void serial_baud(serial_t *obj, int baudrate)
{
    // nrf_uart_baudrate_set() is not used here (registers are accessed
    // directly) to make it possible to set special baud rates like 56000
    // or 31250.

    static uint32_t const acceptedSpeeds[][2] = {
        { 1200,    UART_BAUDRATE_BAUDRATE_Baud1200   },
        { 2400,    UART_BAUDRATE_BAUDRATE_Baud2400   },
        { 4800,    UART_BAUDRATE_BAUDRATE_Baud4800   },
        { 9600,    UART_BAUDRATE_BAUDRATE_Baud9600   },
        { 14400,   UART_BAUDRATE_BAUDRATE_Baud14400  },
        { 19200,   UART_BAUDRATE_BAUDRATE_Baud19200  },
        { 28800,   UART_BAUDRATE_BAUDRATE_Baud28800  },
        { 31250,   (0x00800000UL) /* 31250 baud */   },
        { 38400,   UART_BAUDRATE_BAUDRATE_Baud38400  },
        { 56000,   (0x00E51000UL) /* 56000 baud */   },
        { 57600,   UART_BAUDRATE_BAUDRATE_Baud57600  },
        { 76800,   UART_BAUDRATE_BAUDRATE_Baud76800  },
        { 115200,  UART_BAUDRATE_BAUDRATE_Baud115200 },
        { 230400,  UART_BAUDRATE_BAUDRATE_Baud230400 },
        { 250000,  UART_BAUDRATE_BAUDRATE_Baud250000 },
        { 460800,  UART_BAUDRATE_BAUDRATE_Baud460800 },
        { 921600,  UART_BAUDRATE_BAUDRATE_Baud921600 },
        { 1000000, UART_BAUDRATE_BAUDRATE_Baud1M     }
    };

    if (baudrate <= 1200) {
        UART_INSTANCE->BAUDRATE = UART_BAUDRATE_BAUDRATE_Baud1200;
        return;
    }

    int const item_cnt = sizeof(acceptedSpeeds)/sizeof(acceptedSpeeds[0]);
    for (int i = 1; i < item_cnt; i++) {
        if ((uint32_t)baudrate < acceptedSpeeds[i][0]) {
            UART_INSTANCE->BAUDRATE = acceptedSpeeds[i - 1][1];
            return;
        }
    }

    UART_INSTANCE->BAUDRATE = UART_BAUDRATE_BAUDRATE_Baud1M;
}

void serial_format(serial_t *obj,
                   int data_bits, SerialParity parity, int stop_bits)
{
    (void)obj;

    if (data_bits != 8) {
        error("UART supports only 8 data bits.\r\n");
    }
    if (stop_bits != 1) {
        error("UART supports only 1 stop bits.\r\n");
    }
    if (parity == ParityNone) {
        UART_CB.parity = NRF_UART_PARITY_EXCLUDED;
    } else if (parity == ParityEven) {
        UART_CB.parity = NRF_UART_PARITY_INCLUDED;
    } else {
        error("UART supports only even parity.\r\n");
    }

    // Reconfigure UART peripheral.
    nrf_uart_configure(UART_INSTANCE, UART_CB.parity, UART_CB.hwfc);
}

void serial_irq_handler(serial_t *obj, uart_irq_handler handler, uint32_t id)
{
    (void)obj;
    UART_CB.irq_handler = handler;
    UART_CB.irq_context = id;
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    (void)obj;
    if (enable) {
        switch (irq) {
            case RxIrq:
            #if DEVICE_SERIAL_ASYNCH
                UART_CB.irq_enabled |= UART_IRQ_RX;
            #endif
                nrf_uart_int_enable(UART_INSTANCE, NRF_UART_INT_MASK_RXDRDY);
                break;

            case TxIrq:
            #if DEVICE_SERIAL_ASYNCH
                UART_CB.irq_enabled |= UART_IRQ_TX;
            #endif
                nrf_uart_int_enable(UART_INSTANCE, NRF_UART_INT_MASK_TXDRDY);
                break;
        }
    } else {
        switch (irq) {
            case RxIrq:
            #if DEVICE_SERIAL_ASYNCH
                UART_CB.irq_enabled &= ~UART_IRQ_RX;
                if (!UART_CB.rx_active)
            #endif
                {
                    nrf_uart_int_disable(UART_INSTANCE,
                        NRF_UART_INT_MASK_RXDRDY);
                }
                break;

            case TxIrq:
            #if DEVICE_SERIAL_ASYNCH
                UART_CB.irq_enabled &= ~UART_IRQ_TX;
                if (!UART_CB.tx_active)
            #endif
                {
                    nrf_uart_int_disable(UART_INSTANCE,
                        NRF_UART_INT_MASK_TXDRDY);
                }
                break;
        }
    }
}

int serial_getc(serial_t *obj)
{
    while (!serial_readable(obj)) {
    }

    nrf_uart_event_clear(UART_INSTANCE, NRF_UART_EVENT_RXDRDY);
    return nrf_uart_rxd_get(UART_INSTANCE);
}

void serial_putc(serial_t *obj, int c)
{
    while (!serial_writable(obj)) {
    }

    nrf_uart_event_clear(UART_INSTANCE, NRF_UART_EVENT_TXDRDY);
    nrf_uart_txd_set(UART_INSTANCE, (uint8_t)c);
}

int serial_readable(serial_t *obj)
{
    (void)obj;
#if DEVICE_SERIAL_ASYNCH
    if (UART_CB.rx_active) {
        return 0;
    }
#endif
    return (nrf_uart_event_check(UART_INSTANCE, NRF_UART_EVENT_RXDRDY));
}

int serial_writable(serial_t *obj)
{
    (void)obj;
#if DEVICE_SERIAL_ASYNCH
    if (UART_CB.tx_active) {
        return 0;
    }
#endif
    return (nrf_uart_event_check(UART_INSTANCE, NRF_UART_EVENT_TXDRDY));
}

void serial_break_set(serial_t *obj)
{
    (void)obj;
    nrf_uart_task_trigger(UART_INSTANCE, NRF_UART_TASK_SUSPEND);
    nrf_uart_txrx_pins_disconnect(UART_INSTANCE);
    nrf_gpio_pin_clear(UART_CB.pseltxd);
}

int serial_tx_asynch(serial_t *obj, const void *tx, size_t tx_length,
                     uint8_t tx_width, uint32_t handler, uint32_t event,
                     DMAUsage hint)
{
    (void)obj;
    (void)tx_width;
    (void)hint;
    if (UART_CB.tx_active || !tx_length) {
        return 0;
    }

    UART_CB.tx_buffer = tx;
    UART_CB.tx_length = tx_length;
    UART_CB.tx_pos    = 0;
    UART_CB.tx_asynch_handler = (void(*)())handler;
    UART_CB.events_wanted &= ~SERIAL_EVENT_TX_ALL;
    UART_CB.events_wanted |= event;

    UART_CB.tx_active = true;
    nrf_uart_int_enable(UART_INSTANCE, NRF_UART_INT_MASK_TXDRDY);

    return 0;
}

void serial_rx_asynch(serial_t *obj, void *rx, size_t rx_length,
                      uint8_t rx_width, uint32_t handler, uint32_t event,
                      uint8_t char_match, DMAUsage hint)
{
    (void)obj;
    (void)rx_width;
    (void)hint;
    if (UART_CB.rx_active || !rx_length) {
        return;
    }

    UART_CB.rx_buffer = rx;
    UART_CB.rx_length = rx_length;
    UART_CB.rx_pos    = 0;
    UART_CB.rx_asynch_handler = (void(*)())handler;
    UART_CB.events_wanted &= ~SERIAL_EVENT_RX_ALL;
    UART_CB.events_wanted |= event;
    UART_CB.char_match = char_match;

    UART_CB.rx_active = true;
    nrf_uart_int_enable(UART_INSTANCE, NRF_UART_INT_MASK_RXDRDY);
}

uint8_t serial_tx_active(serial_t *obj)
{
    (void)obj;
    return UART_CB.tx_active;
}

uint8_t serial_rx_active(serial_t *obj)
{
    (void)obj;
    return UART_CB.rx_active;
}

int serial_irq_handler_asynch(serial_t *obj)
{
    (void)obj;
    uint32_t events_to_report = UART_CB.events_wanted & UART_CB.events_occured;
    UART_CB.events_occured &= (~events_to_report);
    return events_to_report;
}

void serial_tx_abort_asynch(serial_t *obj)
{
    (void)obj;
    end_asynch_tx();
    UART_CB.tx_asynch_handler = NULL;
}

void serial_rx_abort_asynch(serial_t *obj)
{
    (void)obj;
    end_asynch_rx();
    UART_CB.rx_asynch_handler = NULL;
}
